<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tx_makanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu Makanan"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_makanan">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mie_ayam"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bakso"
            android:textSize="20sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sate"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tx_minuman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_minuman"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgMakanan" />

    <CheckBox
        android:id="@+id/cbTehManis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/teh_manis"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_minuman" />

    <CheckBox
        android:id="@+id/cbKopiSusu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kopi_susu"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbTehManis" />

    <CheckBox
        android:id="@+id/cbSopBuah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sop_buah"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbKopiSusu" />

    <Button
        android:id="@+id/btOrder"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/order"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbSopBuah" />

    <TextView
        android:id="@+id/tx_HasilPesanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btOrder"
        tools:text="Hasil Pesanan" />

</androidx.constraintlayout.widget.ConstraintLayout>